# Youtube-Sentiment-MLOPS

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
data/processed/: test.parquet  train.parquet  val.parquet
data/raw/: .gitignore
github/workflows/: ci.yml
mlruns/.trash/237600429667188894/: meta.yaml
mlruns/.trash/969246537894645714/: meta.yaml
mlruns/0/: meta.yaml
mlruns/133017774759866514/: meta.yaml
mlruns/133017774759866514/165b524164fa4c3191b5557a0d304088/: meta.yaml
mlruns/133017774759866514/48df541d07c04a3ab9fa209359d1c0c4/: meta.yaml
mlruns/133017774759866514/9f7ae08ccf0f481891e10136beaec2bc/: meta.yaml
mlruns/973482052418210977/: meta.yaml
mlruns/975933202249861610/: meta.yaml
mlruns/976984693274875073/: meta.yaml
mlruns/986768449317394318/: meta.yaml
models/advanced/: lightgbm_best.pkl  xgboost_best.pkl
models/features/: X_test.npz  X_train.npz  X_val.npz  label_encoder.pkl  vectorizer.pkl  y_test.npy  y_train.npy  y_val.npy
notebooks/: 1.0-initial-eda.ipynb  1.0-initial-eda.txt
references/: directory_creation.md  env_setup.md  folder_structure.txt  project_overview.md
reports/docs/: data_splitting.md  eda_findings.md  feature_engineering.md  modeling.md
reports/figures/: .gitignore
src/data/: download_dataset.py  make_dataset.py
src/features/: feature_engineering.py  handling_imbalanced_data.py  tfidf_max_features.py  tfidf_vs_bert.py
src/models/: advanced_training.py  baseline_logistic.py  predict_model.py  train_model.py
src/utils/: mlflow_utils.py
(+4922 files in other folders)
