[project]
name = "youtube-sentiment-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for real-time YouTube sentiment analysis"
authors = [{name = "Sebastian Garrido", email = "sebastiangarrido2790@gmail.com"}]
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "nltk>=3.8",
    "mlflow>=2.8",
    "dvc>=3.0",
    "docker>=7.0", # For local containerization
    "boto3>=1.28", # AWS integration
    "requests>=2.31", # API calls (e.g., YouTube)
    "jupyter==1.0.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
    "transformers>=4.30",
    "torch>=2.0", # For efficient inference
    "accelerate>=0.20",
    "imblearn>=0.0",
]
requires-python = ">=3.10"
